tests/sksl/errors/BitShiftFloatVector.sksl
void main() { float2 x = float2(6); x >>= 1; }
